# expert-work

./: .dockerignore  .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: admin-ui-ci.yml  ci.yml  sandbox-gvisor.yml  sandbox-image-cve-weekly.yml  sandbox-image.yml
.superpowers/sdd/: task-1-report.md  task-2-report.md  task-2b-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-report.md
apps/admin-ui/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
apps/admin-ui-demo/: package.json  pnpm-lock.yaml
docs/: BACKLOG.md  HARNESS-COMPLIANCE.md  ITERATION-PLAN.md  README.md
docs/adr/: 0001-python-vs-typescript-stack.md  0002-state-layer-schema.md  0003-authentication.md  0004-object-storage.md  0005-observability-stack.md  0006-compliance-pluggability.md  0007-secret-store.md  0009-control-plane-egress-ssrf-dns-rebind.md
docs/api/: streaming-events.md
docs/architecture/: 00-OVERVIEW.md  01-SYSTEM-ARCHITECTURE.md  02-AGENT-MANIFEST.md  03-MONOREPO-LAYOUT.md  04-ROADMAP.md  05-RISKS.md  06-OPEN-SOURCE-DEPS.md  07-INFRASTRUCTURE-GAPS.md  08-AGENT-CAPABILITY-ASSESSMENT.md
docs/decisions/: agent-run-budget-and-longtask-bounds.md  deer-flow-context-mgmt-alignment.md  phase-0-launch.md
docs/design/: admin-ui-language.md  admin-ui-nav-ia.md  admin-ui-philosophy.md  agent-base-capabilities-and-form.md  agent-thinking-toggle.md  conversation-centric-ia.md  jinja-dynamic-prompt.md  mcp-platform-servers.md  memory-enhancements.md  platform-agent-templates.md  playground-session-history.md  playground-uplift.md  sandbox-audit-evaluation.md  sandbox-egress-per-agent.md  sandbox-image-consolidation.md  skill-authoring-ia.md  skill-github-import.md  skill-runtime-capability.md  tool-result-context-budget.md  web-search-searxng-builtin-and-tavily-mcp.md
docs/dev/: oidc-keycloak.md
docs/dr/: RUNBOOK.md
docs/research/: 01-orchestration-engines.md  02-sandbox-isolation.md  03-managed-agents-platforms.md  04-deerflow-source-analysis.md  05-deerflow-deeper-scan.md  2026-06-06-self-evolving-skills.md  2026-06-08-hermes-vs-stream-l-harness-reconciliation.md  2026-06-09-context-memory-management-comparison.md  (+31 more)
environments/: dev.yaml  prod.yaml  staging.yaml
infra/: .env.example  Makefile  README.md  docker-compose.ha-e2e.yml  docker-compose.queue-e2e.yml  docker-compose.yml
manifests/: README.md
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/src/orchestrator/: __init__.py  agent_factory.py  llm.py  middleware_assembly.py  multimodal.py  output_judge.py  run_retry.py  runner.py  sse.py  state.py
services/orchestrator/src/orchestrator/context/: __init__.py  compressor.py  skill_reference.py  tool_result_prune.py  working_window.py  workspace_projection.py
services/orchestrator/src/orchestrator/evolution/: graph_runner.py  grounding.py  replay.py
services/orchestrator/src/orchestrator/graph_builder/: _approval.py  _config.py  builder.py  memory.py  planner.py  reflect.py  streaming_redact.py  workspace_ingest.py
services/orchestrator/src/orchestrator/llm/: __init__.py  caller.py  coalesce.py  embedder.py  oauth_provider.py  rate_limit.py  rerank.py  router.py  structured_output.py
services/orchestrator/src/orchestrator/llm/providers/: __init__.py  _errors.py  _metrics.py  _streaming.py  anthropic.py  openai.py  openai_compatible.py
services/orchestrator/src/orchestrator/tools/: __init__.py  _child_run.py  _guards.py  _worker_events.py  approval.py  artifact.py  assembly.py  file_ops.py  find_tools.py  http.py  knowledge.py  manage_task.py  mcp.py  overflow.py  ranking.py  registry.py  sandbox.py  skill_authoring.py  skill_seed.py  skill_view.py  spawn_worker.py  subagent.py  task_schedule.py  update_plan.py  vision.py
services/orchestrator/src/orchestrator/trajectory/: reader.py  recorder.py
services/orchestrator/tests/: test_action_screen_wiring.py  test_agent_factory.py  test_agent_factory_bound_skills.py  test_agent_factory_current_date.py  test_agent_factory_lazy_skill.py  test_agent_factory_skills.py  test_agent_factory_spotlight.py  test_agent_factory_tool_use_enforcement.py  test_agent_node_gate_order.py  test_anthropic_client_stream.py  test_approval_gate.py  test_artifact_tools.py  test_aux_llm_spans.py  test_bash_tool.py  test_cancellation_integration.py  test_context_compressor.py  test_context_compressor_integration.py  test_deferred_tool_promotion.py  test_effort_escalation.py  test_exec_python_tool.py  test_file_ops.py  test_find_tools.py  test_graph_runner.py  test_guards.py  test_http_tool.py  test_knowledge_tool.py  test_llm_cache_integration.py  test_llm_coalesce.py  test_llm_provider_anthropic.py  test_llm_provider_anthropic_stream.py  test_llm_provider_openai.py  test_llm_provider_openai_stream.py  test_llm_rate_limit.py  test_llm_router.py  test_llm_router_oauth.py  test_llm_router_streaming.py  test_llm_streaming_wire.py  test_llm_streaming_wire_anthropic.py  test_mcp_circuit_breaker.py  test_mcp_tool.py  (+83 more)
services/orchestrator/tests/graph_builder/: test_build_tool_context.py  test_tool_bind_filter.py
services/orchestrator/tests/tools/: test_manage_task.py  test_task_schedule.py
services/retention-cleanup-job/: README.md  pyproject.toml
services/retention-cleanup-job/src/retention_cleanup_job/: job.py  main.py  settings.py
services/retention-cleanup-job/tests/: test_job_integration.py  test_job_unit.py
services/sandbox-supervisor/: Dockerfile  README.md  pyproject.toml
services/sandbox-supervisor/src/sandbox_supervisor/: __init__.py  app.py  docker_client.py  domain.py  lifecycle.py  pool.py  quota_enforcer.py  reaper.py  schemas.py  settings.py  store.py  supervisor.py  trace_middleware.py
services/sandbox-supervisor/tests/: test_egress_sitecustomize.py  test_lifecycle.py  test_quota_enforcer.py  test_seccomp.py  test_supervisor_integration.py  test_supervisor_unit.py  test_trace_middleware.py  test_workspace_delete_route.py
tests/: test_fixtures.py  test_sandbox_runner.py  test_smoke.py
(+1032 files in other folders)
