[project]
name = "expert-work"
version = "0.0.0"
description = "Expert Work — multi-tenant enterprise Agent execution engine (workspace root)"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [
    { name = "joneqian", email = "qian.qing0926@gmail.com" },
]
dependencies = [
    "expert-work-common",
    "expert-work-persistence",
    "expert-work-protocol",
    "expert-work-runtime",
    "expert-work-audit-backup-worker",
    "expert-work-billing-rollup-job",
    "expert-work-control-plane",
    "expert-work-credential-proxy",
    "expert-work-event-log-archive-job",
    "expert-work-orchestrator",
    "expert-work-retention-cleanup-job",
    "expert-work-sandbox-supervisor",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    # Backstop against a hung test cancelling the whole pytest job (a networked
    # MCP E2E test could hang on uvicorn SSE shutdown). Applied only to the
    # unit job's command (-m "not integration"), not the slower integration job.
    "pytest-timeout>=2.3.0",
    "pre-commit>=4.0.0",
    "testcontainers[postgres]>=4.9.0",
    "vcrpy>=7.0.0",
    # Stream A.10 — tools/tls/check_tls_config.py parses environments/*.yaml.
    "pyyaml>=6.0,<7",
    "types-pyyaml>=6.0,<7",
    # Stream B.1 — FastAPI ASGI test client.
    "httpx>=0.27,<1",
]

[tool.uv.workspace]
members = [
    "packages/expert-work-common",
    "packages/expert-work-persistence",
    "packages/expert-work-protocol",
    "packages/expert-work-runtime",
    "services/audit-backup-worker",
    "services/billing-rollup-job",
    "services/control-plane",
    "services/credential-proxy",
    "services/event-log-archive-job",
    "services/orchestrator",
    "services/retention-cleanup-job",
    "services/sandbox-supervisor",
]

[tool.uv.sources]
expert-work-common = { workspace = true }
expert-work-persistence = { workspace = true }
expert-work-protocol = { workspace = true }
expert-work-runtime = { workspace = true }
expert-work-audit-backup-worker = { workspace = true }
expert-work-billing-rollup-job = { workspace = true }
expert-work-control-plane = { workspace = true }
expert-work-credential-proxy = { workspace = true }
expert-work-event-log-archive-job = { workspace = true }
expert-work-orchestrator = { workspace = true }
expert-work-retention-cleanup-job = { workspace = true }
expert-work-sandbox-supervisor = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages/*/src", "services/*/src", "tools/*/src", "tests"]
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"**/tests/**/*.py" = ["S101", "S105", "S106"]
"**/test_*.py" = ["S101", "S105", "S106"]
"**/conftest.py" = ["S101"]
# Audit action enum values legitimately contain words like "secret"/"token";
# they are public identifiers, not actual credentials.
"packages/expert-work-protocol/src/expert_work/protocol/audit.py" = ["S105"]
# BaseHTTPRequestHandler's dispatch methods (do_GET / do_POST) are a stdlib
# API contract — the uppercase names are required, not a style choice.
"infra/mock-upstream/echo_server.py" = ["N802"]
# Live HA-failover verify script (Stream 9.4) — an ops harness, not app code:
# it shells out to docker/psql (S603/S607), reads run lease rows with
# UUID-interpolated SQL against the dev DB (S608), streams a run with no overall
# timeout (S113), and swallows the transport error from killing blue (S110).
"tools/ha/verify_failover.py" = ["S110", "S113", "S603", "S607", "S608"]
# Live distributed run-queue verify script (Stream 9.5) — same ops-harness
# posture: shells out to docker/psql (S603/S607) and reads the agent_run row
# with a UUID-interpolated query against the dev DB (S608).
"tools/ha/verify_queue.py" = ["S603", "S607", "S608"]
# Sandbox-image smoke payload runs INSIDE the sandbox: it shells out to the
# bundled `soffice` / `node` binaries (S603/S607) to prove the conversion + JS
# paths. The pinned ruff version narrows S603 to tainted input, but the older
# pre-commit ruff flags every subprocess.run — ignore both rules by config so
# inline noqa doesn't drift between the two versions.
"infra/sandbox-image/smoke_payload.py" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/packages/expert-work-common/src:$MYPY_CONFIG_FILE_DIR/packages/expert-work-persistence/src:$MYPY_CONFIG_FILE_DIR/packages/expert-work-protocol/src:$MYPY_CONFIG_FILE_DIR/packages/expert-work-runtime/src:$MYPY_CONFIG_FILE_DIR/services/audit-backup-worker/src:$MYPY_CONFIG_FILE_DIR/services/billing-rollup-job/src:$MYPY_CONFIG_FILE_DIR/services/control-plane/src:$MYPY_CONFIG_FILE_DIR/services/credential-proxy/src:$MYPY_CONFIG_FILE_DIR/services/orchestrator/src:$MYPY_CONFIG_FILE_DIR/services/retention-cleanup-job/src:$MYPY_CONFIG_FILE_DIR/services/sandbox-supervisor/src"

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiobotocore.*", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jieba.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rank_bm25.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "croniter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pymupdf4llm.*", "pymupdf.*", "fitz.*", "markitdown.*"]
ignore_missing_imports = true
# These ship incomplete inline types; skip following them so their
# (partially-typed) symbols are treated as untyped rather than tripping
# disallow_untyped_calls under --strict.
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests", "services/*/tests", "tools/*"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
markers = [
    "integration: marks integration tests (require external services)",
    "e2e: marks end-to-end tests (full docker-compose stack)",
]
