[project]
name = "expert-work-retention-cleanup-job"
version = "0.0.0"
description = "Expert Work retention TTL cleanup job (Stream D.3)."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [
    { name = "joneqian", email = "qian.qing0926@gmail.com" },
]
dependencies = [
    "expert-work-common",
    "expert-work-persistence",
    "expert-work-protocol",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retention_cleanup_job"]
