[project]
name = "expert-work-sandbox-supervisor"
version = "0.0.0"
description = "Expert Work Sandbox Supervisor — gVisor sandbox lifecycle service (Stream F.1)."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [
    { name = "joneqian", email = "qian.qing0926@gmail.com" },
]
dependencies = [
    "expert-work-common",
    "expert-work-persistence",
    "expert-work-protocol",
    # SandboxRuntimeProvider (F.3) + AuditLogger live in expert-work-runtime.
    "expert-work-runtime",
    # Internal HTTP API — FastAPI + Pydantic v2 + uvicorn, as the control-plane.
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox_supervisor"]
